--- a/.github/workflows/build-test-ubuntu-plot_sync.yml
+++ b/.github/workflows/build-test-ubuntu-plot_sync.yml
@@ -90,16 +90,12 @@ jobs:
       run: |
         sh install.sh -d
 
-    - name: Install timelord
-      run: |
-        . ./activate
-        sh install-timelord.sh
-        ./vdf_bench square_asm 400000
+# Omitted installing Timelord
 
     - name: Test plot_sync code with pytest
       run: |
         . ./activate
-        ./venv/bin/py.test tests/plot_sync/test_*.py -s -v --durations 0
+        ./venv/bin/py.test tests/plot_sync/test_*.py -s -v --durations 0 -n auto
 
 
 #
